# OrionEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CmakeSettings.json  DX12GameEngine.vcxproj  DX12GameEngine.vcxproj.filters  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: bulid.yml
engine-assets/shaders/: PBR_Lite_PS.hlsl  SkyboxPS.hlsl  SkyboxVS.hlsl
engine-assets/skybox/: cubemap.dds  skybox.dds
src/Core/: App.cpp  App.hpp  PlayModeController.hpp
src/Graphics/: Camera.cpp  ConstantBuffer.cpp  CubeRenderer.cpp  Device.hpp  RenderComponent.cpp  RenderComponent.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  ShaderManager.hpp  Skybox.cpp  Skybox.hpp  TriangleRenderer.cpp  TriangleRenderer.hpp
